# MNC-2026-ViTransICD

./: .gitattributes  AGENTS.md  README.md  mise.toml  prek.toml  pyproject.toml  ruff.toml  skills-lock.json
.claude/: settings.local.json
data/: .gitignore
docs/data/: 001-icd-ontology.md
docs/data/v1/: de-01-schemas.md  on-01-icd-ontology.md
docs/paper/: main.typ  references.yaml
docs/tasks/: PLAN.md
docs/tasks/v1/: bm-01-rule_based.md  bm-02-tfidf_bm25.md  dc-03-candidate_generation.md  dc-04.md  dc-1-2-silver-etl.md  de-01-schemas.md  de-02-datasets.md  de-03-bronze.md  ex-1-alignment.md  ma-01-sealion.md  ma-03-transicd.md  ma-04-label_encoding.md  on-01-icd-ontology.md  on-01-ontology_pdf.md  on-02.md  on-02b-icd10_alias_spec.md  on-03-icd10_rules_spec.md  on-1b.md  te-02-metrics.md
src/mnc/: __init__.py
src/mnc/baselines/: __init__.py  _bm25.py  _vectorizer.py  (+3 more)
tests/: __init__.py  conftest.py  test_crawler.py  test_pipeline.py  test_reporter.py  test_vietmed_sum.py  test_vihealthqa.py
tests/baselines/: __init__.py  test_rule_based.py  test_tfidf_bm25.py
tests/datasets/: test_abbrev.py  test_alias_dictionary.py  test_candidate_generation.py  test_coding_rules.py  test_de3_parse_errors.py  test_de3_parse_manifest.py  test_de3_parse_vietmed_sum.py  test_de3_parse_vihealthqa.py  test_icd10_pdf.py  test_ingest.py  test_intro_guidance.py  test_normalize.py  test_ontology_normalizer.py  test_parse.py  test_weak_supervision.py
tests/eval/: test_metrics.py
tests/models/: test_ontology_label_encoder.py  test_sea_lion_encoder.py  test_transicd_head.py
(+52 files in other folders)
