[project]
name = "mnc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Kỳ", email = "40734986+itskyf@users.noreply.github.com" }]
dependencies = [
  "torch>=2.11.0",
  "transformers>=5.5.0",
]

[project.scripts]
mnc = "mnc:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
